<resources>
    <string name="app_name" translation_description="Application Title">Catch a Meteor</string>
    <string name="menu_settings">Settings</string>
    <string name="menu_search">Search</string>
    <string name="cancel">Cancel</string>
    <string name="set" translation_description="Button label. Set the date to the given value">Set</string>
    <string name="go">Go!</string>
    <string name="location_prefs">Location Settings</string>
    <string name="force_gps_pref">Always use GPS</string>
    <string name="force_gps_pref_hint" translation_description="this string continues from \&apos;Always use GPS\&apos;">if enabled, even if network location is available</string>
    <string name="no_use_gps_pref">Set location manually</string>
    <string name="no_use_gps_pref_hint">Enter a place or a lat/long below</string>
    <string name="location_placename">Place name</string>
    <string name="location_placename_hint" translation_description="An example address.  Translators: please pick an address suitable for your country.  If it has an astronomical connection (e.g. the address of an observatory or famous astronomer) then that would be even better.">e.g. 1400 West Mars Hill Road, Flagstaff, AZ.</string>
    <string name="location_lat_pref">Latitude</string>
    <string name="location_long_pref">Longitude</string>
    <string name="degrees" translation_description="angular degrees">Degrees</string>
    <string name="preferences">preferences</string>
    <string name="location_no_auto">Your phone does not support auto-location.   You can set the location manually in preferences.</string>
    <string name="location_offer_to_enable">Auto-location is disabled.  Would you like to enable it?</string>
    <string name="location_offer_to_enable_gps_title">Auto-location disabled</string>
    <string name="location_set_auto">Location set from %1$s to %2$s</string>
    <string name="location_unable_to_geocode">Unable to decode your location - perhaps your network isn\'t available?</string>
    <string name="location_not_found_title" translation_description="dialog box title when location not found">Sorry</string>
    <string name="location_not_found" translation_description="dialog message when placename not found">%s not found.</string>
    <string name="location_long_lat">Longitude:%1$s, Latitude:%2$s</string>
    <string name="location_place_found">Place found.  Setting latitude %1$f and longitude %2$f</string>
    <string name="use_magnetic_correction">Use magnetic correction</string>
    <string name="use_magnetic_correction_hint">Use knowledge of your location to correct orientation from magnetic north to true north</string>
    <string name="provider_prefs" translation_description="Dialog box title for a preferences dialog">Show...</string>
    <string name="show_stars_pref">Stars</string>
    <string name="show_constellations_pref">Constellations</string>
    <string name="show_messier_objects_pref" translation_description="The celestial objects catalogued by Charles Messier">Messier Objects</string>
    <string name="show_planets_pref">Planets</string>
    <string name="show_grid_pref">RA/Dec Grid</string>
    <string name="show_horizon_pref">Horizon</string>
    <string name="show_sky_gradient" translation_description="This is a shading of the color of the sky used for effect">Sky Gradient</string>
    <string name="show_meteors_pref">Meteor Showers</string>
    <string name="sensor_prefs">Sensor Settings</string>
    <string name="sensor_speed" translation_description="How quickly the sensor should send us data">Sensor Speed</string>
    <string name="sensor_damping" translation_description="The amount of smoothing applied to the sensor outputs.">Damping</string>
    <string name="ecliptic">Ecliptic</string>
    <string name="show_hubble_layer_pref">Hubble Images</string>
    <string name="malformed_loc_error">Latitude or longitude setting isn\'t a number.</string>
    <string name="dialog_accept" translation_description="accepting the licence agreement">Accept</string>
    <string name="dialog_decline" translation_description="declining the licence agreement">No Thanks</string>
    <string name="menu_help" translation_description="menu item to show \&apos;Help\&apos; box">Help</string>
    <string name="help_dialog_title">Help for Sky Map</string>
    <string name="eula_dialog_title">End User License Agreement</string>
    <string name="set_manual">Switching to manual mode</string>
    <string name="set_auto">Switching to automatic mode</string>
    <string name="menu_zoom_in">Zoom in</string>
    <string name="menu_zoom_out">Zoom out</string>
    <string name="menu_toggle_dim">Toggle night mode</string>
    <string name="zenith">ZENITH</string>
    <string name="nadir">NADIR</string>
    <string name="north">NORTH</string>
    <string name="east">EAST</string>
    <string name="west">WEST</string>
    <string name="south">SOUTH</string>
    <string name="search_label">Search the Sky</string>
    <string name="search_hint" translation_description="an example search target">e.g. Mars</string>
    <string name="no_search_title">No results</string>
    <string name="no_search_results_text">No results were found.</string>
    <string name="many_search_results_title">Did you mean?</string>
    <string name="many_search_results_text">Please select one</string>
    <string name="searching_for_text">Searching for %s...</string>
    <string name="found_target_text">Found %s.</string>
    <string name="other" translation_description="A preference category (ie preferences that don&apos;t belong in any other category)">Other</string>
    <string name="planetary_images">Show Planet Images</string>
    <string name="menu_time">Time Travel</string>
    <string name="time_travel_start_message">Traveling through time ...</string>
    <string name="time_travel_start_message_alt">Traveling through time to %s ...</string>
    <string name="time_travel_close_message">Back to the present ...</string>
    <string name="popular_dates_prompt" translation_description="Label for a list of dates the user can choose from">Popular dates</string>
    <string name="custom_date_prompt" translation_description="Label telling the user to manually specify a date">Or select your own date</string>
    <string name="change_date_prompt">Change the date</string>
    <string name="change_time_prompt">Change the time</string>
    <string name="now_visiting" translation_description="used in time travel dialog to tell the user what time they are visiting, time formatted as yyyy.mm.dd at hh.mm.ss + timezone">        Now visiting: %s</string>
    <string name="time_travel_label_past" translation_description="Label showing that we are in the past">Time Travel: Past</string>
    <string name="time_travel_label_future" translation_description="Label showing that we are in the future">Time Travel: Future</string>
    <string name="time_travel_stopped" translation_description="Label showing rate of travel through time">Time travel frozen</string>
    <string name="time_travel_second_speed" translation_description="Label showing rate of travel through time.  The symbol means greater than.">Traveling &gt; @ 1 sec/sec</string>
    <string name="time_travel_minute_speed" translation_description="Label showing rate of travel through time">Traveling &gt; @ 1 min/sec</string>
    <string name="time_travel_10minute_speed" translation_description="Label showing rate of travel through time">Traveling &gt; @ 10 min/sec</string>
    <string name="time_travel_hour_speed" translation_description="Label showing rate of travel through time">Traveling &gt; @ 1 hour/sec</string>
    <string name="time_travel_day_speed" translation_description="Label showing rate of travel through time">Traveling &gt; @ 1 day/sec</string>
    <string name="time_travel_week_speed" translation_description="Label showing rate of travel through time">Traveling &gt; @ 1 week/sec</string>
    <string name="time_travel_second_speed_back" translation_description="Label showing rate of travel through time">Traveling &lt; @ 1 sec/sec</string>
    <string name="time_travel_minute_speed_back" translation_description="Label showing rate of travel through time">Traveling &lt; @ 1 min/sec</string>
    <string name="time_travel_10minute_speed_back" translation_description="Label showing rate of travel through time">Traveling &lt; @ 10 min/sec</string>
    <string name="time_travel_hour_speed_back" translation_description="Label showing rate of travel through time">Traveling &lt; @ 1 hour/sec</string>
    <string name="time_travel_day_speed_back" translation_description="Label showing rate of travel through time">Traveling &lt; @ 1 day/sec</string>
    <string name="time_travel_week_speed_back" translation_description="Label showing rate of travel through time">Traveling &lt; @ 1 week/sec</string>
    <string name="use_sound_effects" translation_description="A preferences menu label">Enable sound</string>
    <string name="enable_layer_toast">Enabling %s layer</string>
    <string name="disable_layer_toast">Disabling %s layer</string>
    <string name="menu_gallery">Gallery</string>
    <string name="gallery_image_search_btn">Find in sky</string>
    <string name="gallery_image_back_btn">Back to gallery</string>
    <string name="hubble_image_gallery_title">Sky Map Hubble Gallery</string>
    <string name="hubble_image">Hubble Image</string>
    <string name="search_target_found_message" translation_description="displayed when a search target has been located">You found:</string>
    <string name="search_overlay_title" translation_description="title for search overlay">Point your phone toward the arrow</string>
    <string name="help_use_title">How to use this App:</string>
    <string name="help_use_cal">1. Check the calendar of meteor showers to know when is best to watch.</string>
    <string name="help_use_watch">2. Get out there and watch the sky.</string>
    <string name="help_use_map">3. Use the sky map to locate the area to look at.</string>
    <string name="help_use_record">4. Double tap the screen where you see meteors. The app will save your observations and let you share them.</string>
    <string name="help_use_learn">5. Learn more about meteor watching using the information section.</string>
    <string name="help_checklist_title">Observer\'s checklist:</string>
    <string name="help_checklist_app"> +  Your "Catch a Meteor" App on your Android device to note down your observations</string>
    <string name="help_checklist_chair"> +  Chair: a reclining deck-chair is highly desirable. This should be set up firmly on your observing platform (e.g. garden or back lawn), ensuring it will not rock about or tip up.</string>
    <string name="help_checklist_torch"> +  Torch: this needs to be red or red-covered (use red paper or cellophane) to see without ruining your night vision.</string>
    <string name="help_checklist_clothing"> +  Clothing: Several thin layers of warm clothing are useful, but they msut not fit tightly as this restrict the blood circulation and leads to cooling. Even summer nights can get very cold on occasion, so never neglet this aspect of the kit. Remember, especially head, hands and feet.</string>
    <string name="help_checklist_blankets"> +  Sleeping bag (or blankets): to help further insulate both feet and legs from cold concrete or the wind.</string>
    <string name="help_checklist_magnitude"> +  Magnitudes: use the magnitude of comparison stars (you can find some in this application) to help you estimatingthe brightness of meteor spotted.</string>
    <string name="help_checklist_dark"> +  Dark adaptation: Allow plenty of time for your eyes to accustom to the night sky, avoiding all blue light beforehand. The time taken to fully adapt to the dark from a well&#8211;lit room is approximately 20-40min.</string>
</resources>