<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Info$CheckListFragment" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >
        
        <TextView
            android:id="@+id/textView1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/help_checklist_title"
            android:textAppearance="?android:attr/textAppearanceLarge" />
        <View
		    android:layout_width="fill_parent"
	    	android:layout_height="10.1dp"
	    	android:background="#FF33b5e5"
            android:alpha="0"
   			/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/help_checklist_app"
            android:textAppearance="?android:attr/textAppearanceMedium" />
        <View
		    android:layout_width="fill_parent"
	    	android:layout_height="5dp"
	    	android:background="#FF33b5e5"
            android:alpha="0"
   			/>
        
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/help_checklist_chair"
            android:textAppearance="?android:attr/textAppearanceMedium" />
        <View
		    android:layout_width="fill_parent"
	    	android:layout_height="5dp"
	    	android:background="#FF33b5e5"
            android:alpha="0"
   			/>
        
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/help_checklist_torch"
            android:textAppearance="?android:attr/textAppearanceMedium" />
        <View
		    android:layout_width="fill_parent"
	    	android:layout_height="5dp"
	    	android:background="#FF33b5e5"
            android:alpha="0"
   			/>
        
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/help_checklist_clothing"
            android:textAppearance="?android:attr/textAppearanceMedium" />
        <View
		    android:layout_width="fill_parent"
	    	android:layout_height="5dp"
	    	android:background="#FF33b5e5"
            android:alpha="0"
   			/>
        
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/help_checklist_blankets"
            android:textAppearance="?android:attr/textAppearanceMedium" />
        <View
		    android:layout_width="fill_parent"
	    	android:layout_height="5dp"
	    	android:background="#FF33b5e5"
            android:alpha="0"
   			/>
        
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/help_checklist_magnitude"
            android:textAppearance="?android:attr/textAppearanceMedium" />
        <View
		    android:layout_width="fill_parent"
	    	android:layout_height="5dp"
	    	android:background="#FF33b5e5"
            android:alpha="0"
   			/>
        
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/help_checklist_dark"
            android:textAppearance="?android:attr/textAppearanceMedium" />        
        </LinearLayout>

</ScrollView>
